--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -736,7 +736,7 @@
   }
 
   .about .abs-img-1 {
-    width: 285px;
+    width: 150px;
   }
 
   .about .abs-img-1 .w-100 {
